# mc-manager

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.cfg  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: post-receive  pre-commit
.github/workflows/: unit-test.yml
apps/account/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  views.py
apps/account/migrations/: 0001_initial.py  0002_auto_20210408_1554.py
apps/account/templates/: base.html  navbar.html
apps/core/: admin.py  exceptions.py  forms.py  models.py  network.py  urls.py  views.py
apps/core/decorators/: CheckServerAuthorization.py
apps/core/forms/: PermissionForm.py  PropertiesForm.py  ServerForm.py  ServerShareEditForm.py  ServerShareForm.py  __init__.py
apps/core/migrations/: 0001_initial.py  0002_delete_serverproperties.py  0003_servershare.py
apps/core/models/: MinecraftInstance.py  Server.py  ServerProperties.py  ServerShare.py  __init__.py  functions.py
apps/core/templatetags/: is_authorized.py
apps/main/: admin.py  forms.py  urls.py
deploy/: apache-example.conf
docs/: STRUCTURE.md  index.md
mchandler/: config.cfg  db.sqlite3  manage.py
mchandler/account/: models.py  urls.py  views.py
mchandler/accounts/: views.py
mchandler/main/: admin.py  forms.py  models.py  urls.py  views.py
mchandler/mchandler/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mchandler/templates/: nav.html
project/: asgi.py  urls.py  wsgi.py
project/settings/: __init__.py  base.py  dev.py  prod.py
(+79 files in other folders)
